# YadroBaseStationsTask

./: CMakeLists.txt  readme.md
include/: ClubTime.h  ComputerClub.h  Event.h  Table.h
src/: ClubTime.cpp  ComputerClub.cpp  Event.cpp  main.cpp
tests/: CMakeLists.txt  ClubTimeTests.cpp
